--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -57,7 +57,7 @@ author_profile: false
 </body>
 
  <script>
-import myArray from '../assets/standardization.json';
+import { myArray }from '../assets/standardization.json';
 buildTable(myArray);
 
 function buildTable(data) {
