--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -56,7 +56,7 @@ author_profile: false
     </table>
 </body>
 
- <script>
+ <script type="module">
 import { myArray }from '../assets/standardization.json';
 buildTable(myArray);
 
