--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -58,7 +58,7 @@ author_profile: false
 
  <script type="module">
 import myArray from '../assets/standardization.json' assert {type: "json"};
-console.log(myArray)
+console.log(myArray);
 buildTable(myArray);
 
 function buildTable(data) {
