--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
 
-<!--     
-    <script src="js/jquery.min.js" type="text/javascript"></script> -->
+    
+    <script src="js/jquery.min.js" type="text/javascript"></script>
     <script src="js/jquery.dataTables.min.js" type="text/javascript"></script>
 
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.0/css/jquery.dataTables.css">
@@ -52,7 +52,7 @@
 </body>
 
  <script type="module">
-import myArray from 'standardization.json' assert {type: "json"};
+import myArray from './standardization.json' assert {type: "json"};
 console.log(myArray);
 buildTable(myArray);
 
