--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 
     
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js" type="text/javascript"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.0/css/jquery.dataTables.css">
+    <script src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js" type="text/javascript"></script>
+    
   
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.js"></script>
+    <script type="text/css" charset="utf8" src="https://cdn.datatables.net/autofill/2.4.0/css/autoFill.dataTables.min.css"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/autofill/2.4.0/js/dataTables.autoFill.min.js"></script>
-    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/autofill/2.4.0/css/autoFill.dataTables.min.css"></script>
-
+    <script type="text/css" charset="utf8" src="https://cdn.datatables.net/fixedheader/3.2.3/css/fixedHeader.dataTables.min.css"></script>
+    <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/fixedheader/3.2.3/js/dataTables.fixedHeader.min.js"></script>
 
 
     <!-- Import bootstrap -->
@@ -95,7 +97,10 @@ function buildTable(data) {
 }
 
 $(document).ready( function () {
-    $('#example').DataTable();
+    $('#example').DataTable({
+        fixHeader:true, 
+        autoFill:true
+    });
 } );
 </script>
 <html></html>
