--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+layout: page
+title: "Full Dataset Survey"
+permalink: /survey/
+
+
 <!DOCTYPE html>
 <html lang="en">
 <link rel="icon" href="data:;base64,iVBORw0KGgo=">
