--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ permalink: /survey/
 </body>
 
  <script type="module">
-import myArray from './standardization.json' assert {type: "json"};
+import myArray from './standardization.json';
 console.log(myArray);
 buildTable(myArray);
 
