--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -16,7 +16,7 @@ author_profile: false
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script> -->
     <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.0/css/jquery.dataTables.css">
     <script src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js" type="text/javascript"></script>
     
@@ -71,7 +71,7 @@ author_profile: false
 </html>
 
  <script type="module">
-import myArray from './standardization.json' assert {type: "json"};
+import myArray from '../assets/standardization.json' assert {type: "json"};
 console.log(myArray);
 buildTable(myArray);
 
