--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -27,12 +27,7 @@ author_profile: false
       referrerpolicy="no-referrer"
     />
 
-    <!-- ✅ load jQuery ✅ -->
-    <!-- <script
-      src="https://code.jquery.com/jquery-3.6.0.min.js"
-      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
-      crossorigin="anonymous"
-    ></script> -->
+
 
     <!-- ✅ load DataTables ✅ -->
     <script
@@ -96,6 +91,7 @@ author_profile: false
 if (typeof jQuery == 'undefined') {  
   document.write('<script type="text/javascript" src=""https://code.jquery.com/jquery-3.2.1.min.js""></script>');
 }
+var $jq = jQuery.noConflict();
 
 import myArray from '../assets/standardization.json' assert {type: "json"};
 console.log(myArray);
@@ -106,30 +102,30 @@ function buildTable(data) {
 
     for (var i = 0; i < data.length; i++) {
         var row =   `<tr>
-                        <td>${data[i].dataset_name}</td>
-                        <td>${data[i].title}</td>
-                        <td>${data[i].paper_link}</td>
-                        <td>${data[i].motivation}</td>
-                        <td>${data[i].task_type}</td>
-                        <td>${data[i].has_train_data}</td>
-                        <td>${data[i].size}</td>
-                        <td>${data[i].input_data_source}</td>
-                        <td>${data[i].original_language}</td>
-                        <td>${data[i].translation}</td>
-                        <td>${data[i].label_source}</td>
-                        <td>${data[i].publication_year}</td>
-                        <td>${data[i].published_venue}</td>
-                        <td>${data[i].reused_dataset}</td>
-                        <td>${data[i].creators}</td>
-                        <td>${data[i].citations}</td>
-                        <td>${data[i].in_huggingface}</td>
+                        <td>$jq{data[i].dataset_name}</td>
+                        <td>$jq{data[i].title}</td>
+                        <td>$jq{data[i].paper_link}</td>
+                        <td>$jq{data[i].motivation}</td>
+                        <td>$jq{data[i].task_type}</td>
+                        <td>$jq{data[i].has_train_data}</td>
+                        <td>$jq{data[i].size}</td>
+                        <td>$jq{data[i].input_data_source}</td>
+                        <td>$jq{data[i].original_language}</td>
+                        <td>$jq{data[i].translation}</td>
+                        <td>$jq{data[i].label_source}</td>
+                        <td>$jq{data[i].publication_year}</td>
+                        <td>$jq{data[i].published_venue}</td>
+                        <td>$jq{data[i].reused_dataset}</td>
+                        <td>$jq{data[i].creators}</td>
+                        <td>$jq{data[i].citations}</td>
+                        <td>$jq{data[i].in_huggingface}</td>
                     </tr>`;
         table.innerHTML += row;
     }
 }
 
-$(document).ready( function () {
-    $('#example').DataTable({
+$jq(document).ready( function () {
+    $jq('#example').DataTable({
         fixHeader:true, 
         autoFill:true
     });
