--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -27,6 +27,12 @@ author_profile: false
       referrerpolicy="no-referrer"
     />
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
+    <script>
+        $.noConflict();
+        jQuery( document ).ready(function( $ ) {
+        // Code that uses jQuery's $ can follow here.
+        });
+    </script>
     <!-- ✅ load DataTables ✅ -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
@@ -86,7 +92,6 @@ author_profile: false
 </html>
 
  <script type="module">
-$.noConflict();
 
 import myArray from '../assets/standardization.json' assert {type: "json"};
 console.log(myArray);
