--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -124,8 +124,8 @@ function buildTable(data) {
     }
 }
 
-$jq(document).ready( function () {
-    $jq('#example').DataTable({
+$(document).ready( function () {
+    $('#example').DataTable({
         fixHeader:true, 
         autoFill:true
     });
