--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -26,10 +26,11 @@ author_profile: false
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script>
-        $.noConflict();
+        $.noConflict(true);
     </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
+
     <!-- ✅ load DataTables ✅ -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/js/jquery.dataTables.min.js"
