--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -21,15 +21,13 @@ author_profile: false
     <script src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js" type="text/javascript"></script> -->
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/datatables/1.10.21/css/jquery.dataTables.min.css"
-      integrity="sha512-1k7mWiTNoyx2XtmI96o+hdjP8nn0f3Z2N4oF/9ZZRgijyV4omsKOXEnqL1gKQNPy2MTSP9rIEWGcH/CInulptA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
+      href="https://cdn.datatables.net/1.12.0/css/jquery.dataTables.css"
     />
+
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script>
         $.noConflict(true);
     </script>
-    <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
 
     <!-- ✅ load DataTables ✅ -->
     <script
