--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -26,7 +26,7 @@ author_profile: false
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
     <script>
-        $.noConflict(true);
+        $.noConflict();
     </script>
 
     <!-- ✅ load DataTables ✅ -->
