--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -85,36 +85,37 @@ author_profile: false
 import myArray from '../assets/standardization.json' assert {type: "json"};
 console.log(myArray);
 buildTable(myArray);
+var jq = $.noConflict();
 
 function buildTable(data) {
     var table = document.getElementById('myTable');
 
     for (var i = 0; i < data.length; i++) {
         var row =   `<tr>
-                        <td>${data[i].dataset_name}</td>
-                        <td>${data[i].title}</td>
-                        <td>${data[i].paper_link}</td>
-                        <td>${data[i].motivation}</td>
-                        <td>${data[i].task_type}</td>
-                        <td>${data[i].has_train_data}</td>
-                        <td>${data[i].size}</td>
-                        <td>${data[i].input_data_source}</td>
-                        <td>${data[i].original_language}</td>
-                        <td>${data[i].translation}</td>
-                        <td>${data[i].label_source}</td>
-                        <td>${data[i].publication_year}</td>
-                        <td>${data[i].published_venue}</td>
-                        <td>${data[i].reused_dataset}</td>
-                        <td>${data[i].creators}</td>
-                        <td>${data[i].citations}</td>
-                        <td>${data[i].in_huggingface}</td>
+                        <td>jq{data[i].dataset_name}</td>
+                        <td>jq{data[i].title}</td>
+                        <td>jq{data[i].paper_link}</td>
+                        <td>jq(data[i].motivation}</td>
+                        <td>jq{data[i].task_type}</td>
+                        <td>jq{data[i].has_train_data}</td>
+                        <td>jq{data[i].size}</td>
+                        <td>jq{data[i].input_data_source}</td>
+                        <td>jq{data[i].original_language}</td>
+                        <td>jq{data[i].translation}</td>
+                        <td>jq{data[i].label_source}</td>
+                        <td>jq{data[i].publication_year}</td>
+                        <td>jq{data[i].published_venue}</td>
+                        <td>jq{data[i].reused_dataset}</td>
+                        <td>jq{data[i].creators}</td>
+                        <td>jq{data[i].citations}</td>
+                        <td>jq{data[i].in_huggingface}</td>
                     </tr>`;
         table.innerHTML += row;
     }
 }
 
 $(document).ready( function () {
-    $('#example').DataTable({
+    jq('#example').DataTable({
         fixHeader:true, 
         autoFill:true
     });
