--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -118,7 +118,7 @@ function buildTable(data) {
 }
 
 $(document).ready( function () {
-    let table = new DataTable('#example');
+    let table = new DataTable('#example', scrollX=true);
     
 } );
 </script>
