--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -118,6 +118,10 @@ function buildTable(data) {
 }
 
 $(document).ready( function () {
-    let currtable = new DataTable('#example', scrollX=true);
+    let currtable = new DataTable({{
+        data: '#example',
+        scrollY: 200,
+        scrollX: true,
+    });
 } );
 </script>
