--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -118,7 +118,7 @@ function buildTable(data) {
 }
 
 $(document).ready( function () {
-    let currtable = new DataTable({{
+    let currtable = new DataTable({
         data: '#example',
         scrollY: 200,
         scrollX: true,
