--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -150,8 +150,12 @@ function buildTable(data) {
     }
 }
 
-$(document).ready( function () {
-    let currtable = new DataTable({data:'#example', scrollX:true});
-    currtable.scrollX = true;
-} );
+// $(document).ready( function () {
+//     let currtable = new DataTable({data:'#example', scrollX:true});
+//     currtable.scrollX = true;
+// } );
+$(document).ready(function () {
+    $('#example').DataTable();
+});
+
 </script>
