--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -34,7 +34,7 @@ author_profile: false
 
   <!-- DataTables JS -->
 
-  <script src= 
+  <script defer src= 
 
 "https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"> 
 
