roll back again

--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -82,7 +82,7 @@ author_profile: false
         
     </table>
 </body>
-
+</html>
 
  <script type="module">
 
@@ -118,8 +118,7 @@ function buildTable(data) {
 }
 
 $(document).ready( function () {
-    let currtable = new DataTable('#example');
-    // currtable.scrollX = true;
+    let table = new DataTable('#example');
+    
 } );
 </script>
-</html>
