try to fix the javascript problem

--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -114,6 +114,7 @@ function buildTable(data) {
 }
 
 $(document).ready( function () {
-    new DataTable('#example')
+    $.noConflict();
+    var table = $('#example').DataTable();
 } );
 </script>
