--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -25,9 +25,9 @@ author_profile: false
     />
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <script>
+    <!-- <script>
         $.noConflict();
-    </script>
+    </script> -->
 
     <!-- ✅ load DataTables ✅ -->
   
