--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -16,12 +16,10 @@ author_profile: false
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     
-    <!-- <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.12.0/css/jquery.dataTables.css">
-    <script src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.min.js" type="text/javascript"></script> -->
+   
     <link
       rel="stylesheet"
-      href="https://cdn.datatables.net/1.12.0/css/jquery.dataTables.css"
+      href="https://cdn.datatables.net/1.12.0/css/dataTables.bulma.min.css"
     />
 
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" type="text/javascript"></script>
@@ -32,17 +30,10 @@ author_profile: false
     <script type="text/css" charset="utf8" src="https://cdn.datatables.net/fixedheader/3.2.3/css/fixedHeader.dataTables.min.css"></script>
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/fixedheader/3.2.3/js/dataTables.fixedHeader.min.js"></script>
 
-
-    <!-- Import bootstrap -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script type="text/css" charset="utf8" src="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css"></script>
 
-    <!-- Import Ajax -->
-    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script> -->
-
-    <!-- Import DataTable -->
-    <!-- <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.12.0/js/jquery.dataTables.js"></script> -->
     
 </head>
 <body>
