update standardization and dataset link

--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -81,9 +81,10 @@ function buildTable(data) {
     var table = document.getElementById('myTable');
 
     for (var i = 0; i < data.length; i++) {
-        var row =   `<tr>
-                        <td><a href=${data[i].data_link}>${data[i].dataset_name}</td>
-                        <td><a href=${data[i].paper_link}>${data[i].title}</td>
+        if (!("data_link" in data[i])) {
+            var row =   `<tr>
+                        <td>${data[i].dataset_name}</td>
+                        <td><a href=${data[i].paper_link}>${data[i].title}</a></td>
                         <td>${data[i].motivation}</td>
                         <td>${data[i].task_type}</td>
                         <td>${data[i].has_train_data}</td>
@@ -98,6 +99,26 @@ function buildTable(data) {
                         <td>${data[i].creators}</td>
                         <td>${data[i].in_huggingface}</td>
                     </tr>`;
+        } else {
+            var row =   `<tr>
+                        <td>${data[i].dataset_name}(<a href=${data[i].data_link}>download)</td>
+                        <td><a href=${data[i].paper_link}>${data[i].title}</a></td>
+                        <td>${data[i].motivation}</td>
+                        <td>${data[i].task_type}</td>
+                        <td>${data[i].has_train_data}</td>
+                        <td>${data[i].size}</td>
+                        <td>${data[i].input_data_source}</td>
+                        <td>${data[i].original_language}</td>
+                        <td>${data[i].translation}</td>
+                        <td>${data[i].label_source}</td>
+                        <td>${data[i].publication_year}</td>
+                        <td>${data[i].published_venue}</td>
+                        <td>${data[i].reused_dataset}</td>
+                        <td>${data[i].creators}</td>
+                        <td>${data[i].in_huggingface}</td>
+                    </tr>`;
+        }
+        
         table.innerHTML += row;
     }
     $('#example').dataTable( {
