add how to search by column

--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -59,9 +59,11 @@ author_profile: false
       overflow: hidden;
       background-color: #f1f1f1;
     }
+
  </style>
 
 <body>
+    <h4>Scroll to the bottom of the table to search by column.</h4>
     <button type="button" class="collapsible">Click to See the Explanation for Each Aspect and Category in Our Annotation Scheme</button>
     <div class="content">
     <h2>Motivation</h2>
