--- a/_pages/full_survey.html
+++ b/_pages/full_survey.html
@@ -142,6 +142,7 @@ author_profile: false
                 <th>Original Language</th>
                 <th>Translation Used</th>
                 <th>Label Source</th>
+                <th>Languages</th>
                 <th>Publication Year</th>
                 <th>Published Venue</th>
                 <th>Reused Dataset</th>
@@ -165,6 +166,7 @@ author_profile: false
                 <th>Original Language</th>
                 <th>Translation Used</th>
                 <th>Label Source</th>
+                <th>Languages</th>
                 <th>Publication Year</th>
                 <th>Published Venue</th>
                 <th>Reused Dataset</th>
@@ -219,6 +221,7 @@ function buildTable(data) {
                         <td>${data[i].original_language}</td>
                         <td>${data[i].translation}</td>
                         <td>${data[i].label_source}</td>
+                        <td>${data[i].languages}</td>
                         <td>${data[i].publication_year}</td>
                         <td>${data[i].published_venue}</td>
                         <td>${data[i].reused_dataset}</td>
@@ -237,6 +240,7 @@ function buildTable(data) {
                         <td>${data[i].original_language}</td>
                         <td>${data[i].translation}</td>
                         <td>${data[i].label_source}</td>
+                        <td>${data[i].languages}</td>
                         <td>${data[i].publication_year}</td>
                         <td>${data[i].published_venue}</td>
                         <td>${data[i].reused_dataset}</td>
